# viabtc-profit-scraper

./: .gitignore  Cargo.toml  LICENSE  README.txt  debug_last_response.json  input.txt
src/: api.rs  config.rs  excel.rs  input.rs  main.rs  models.rs  totals.rs  utils.rs
