[package]
name = "viabtc-profit-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }

reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "gzip",
    "brotli",
    "deflate",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

csv = "1.3"
anyhow = "1"
url = "2"
io = "0.0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

# to build: RUSTFLAGS='-C target-feature=+crt-static' cargo build --release --target x86_64-pc-windows-gnu
