[package]
name = "viabtc-profit-scraper"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1"

tokio = { version = "1", features = ["full"] }

reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "gzip",
    "brotli",
    "deflate",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

url = "2"

chrono = "0.4"

rust_xlsxwriter = "0.66"

tracing = "0.1"
tracing-subscriber = "0.3"

futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
